チャットページの外観だけ実装した

--- a/front/src/css/messageInput.scss
+++ b/front/src/css/messageInput.scss
@@ -7,10 +7,10 @@ $shadow-color: rgba(0, 0, 0, 0.1);
 .message-input-container {
   position:sticky;
   bottom: 0;
-  width: 600px;
+  width: 100%;
   display: flex;
   align-items: center;
-  padding: 8px;
+  padding: 0px;
   background-color: $message-main-color;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -30,8 +30,8 @@ $shadow-color: rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     margin-left: 8px;
     padding: 10px;
     padding-left: 8px; // iconが非対称であるため，微調整しているだけ
