bottomバーをとりあえず実装

--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url("./sakura_tree.png");
+  background-image: url("./sakura_tree2.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
