--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -1,11 +1,11 @@
 .App {
   text-align: center;
-  background-image: url("./sakura_tree2.png");
+  /* background-image: url("./sakura_tree2.png"); */
+  background: linear-gradient(to top, rgba(217, 175, 217, 0.5) 0%, rgba(151, 217, 225, 0.3) 100%),url(sakura_tree2.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: whitesmoke;
   padding: 0;
   margin: 0;
   min-height: 100vh;
